--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: Cesta Vhľadu: Zen a Krishnamurti
 description: Archív textov pre hľadajúcich vhľad a likvidáciu konceptov.
