--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,2 @@
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-minima
 title: Cesta Vhľadu: Zen a Krishnamurti
-description: Archív textov pre hľadajúcich vhľad a likvidáciu konceptov.
