--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
+title: "Cesta Vhľadu: Zen a Krishnamurti"
+description: "Archív textov pre hľadajúcich vhľad a likvidáciu konceptov"
 theme: jekyll-theme-minima
-title: Cesta Vhľadu: Zen a Krishnamurti
