--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: "Cesta Vhľadu: Zen a Krishnamurti"
 description: "Archív textov pre hľadajúcich vhľad a likvidáciu konceptov"
-theme: jekyll-theme-minima
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
