--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Cesta Vhľadu: Zen a Krishnamurti"
 description: "Archív textov pre hľadajúcich vhľad a likvidáciu konceptov"
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
