--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,12 @@ description: "Archív textov pre hľadajúcich vhľad a likvidáciu konceptov"
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
+
+# Cayman theme customization
+cayman:
+  header_background_color: "1a237e"
+  header_background_image: "linear-gradient(120deg, #1a237e, #283593)"
+
+# Vlastné texty pre header
+project_name: "Cesta Hľadania"
+project_tagline: "Archív textov"
