Update navigation links in navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Domov
   link: /
+- name: Krišnamurti
+  link: /krisna.html
 - name: O stránke
   link: /about.html
-- name: Články
-  link: /clanky.html
