--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /
 - name: Krišnamurti
   link: /krisna.html
-- name ZEN
+- name: ZEN
   link: /zen.html
 - name: O stránke
   link: /about.html
