--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,10 @@ description: "Archív textov"
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
+
+# Pridajte toto na koniec
+header_pages:
+  - index.md
+  - krisna.md
+  - zen.md
+  - about.md
