--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: "Cesta Hľadania"
+title: "Cesta Hľadania" 
 description: "Archív textov"
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
 
-# Pridajte toto na koniec
+# Toto musí byť pridané
 header_pages:
   - index.md
-  - krisna.md
+  - krisna.md  
   - zen.md
   - about.md
