--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,5 @@
-title: "Cesta Hľadania" 
+title: "Cesta Hľadania"
 description: "Archív textov"
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
 plugins:
   - jekyll-remote-theme
-
-# Toto musí byť pridané
-header_pages:
-  - index.md
-  - krisna.md  
-  - zen.md
-  - about.md
