--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Cesta Hľadania"
 description: "Archív textov"
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
   - jekyll-remote-theme
