--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,3 @@
-title: "Cesta Hľadania"
-description: "Archív textov"
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-remote-theme
-
-# Vypnite GitHub buttons
-github:
-  is_project_page: false
+- jekyll-remote-theme # add this line to the plugins list if you already have one
