--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: "Archív textov"
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
-* [Krišnamurti(krisna.html)
+* [Krišnamurti](krisna.html)
