--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+title: "Cesta Hľadania"
+description: "Archív textov"
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
+
+# Skryť GitHub Pages footer
+github:
+  is_project_page: false
